# python-solid-isp-dip

./: .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .secrets.toml  README.md  config.py  main.py  pyproject.toml  requirements.txt  settings.toml
docs/: 01_PARTE_1.md  02_PARTE_2.md  DBEAVER.md  DOCKER_POETRY.md  POETRY.md  SOLID.md
src/: config.py  init_loguru.py
src/entities/: users.py
src/infra/config/: db_base.py  db_config.py
