[tool.poetry]
name = "python-solid-isp-dip"
version = "0.1.0"
description = "SOLID - interface and dependence injection"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = {version = "^21.7b0", allow-prereleases = true}
flake8 = "^3.9.2"
pylint = "^2.9.3"
autoflake = "^1.4"
isort = "^5.9.2"
mypy = "^0.910"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
